--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
+    "react-sticky": "^6.0.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
